// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render if there are no announcements 1`] = `null`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUCMENTS mutation when the user clicks the modals action button | GO action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "paddingHorizontal": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#B4B6BA",
                      "justifyContent": "flex-end",
                      "margin": 0,
                      "padding": 25,
                      "position": "absolute",
                      "right": -20,
                      "top": -70,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#007398",
            "borderRadius": 50,
            "borderWidth": 0,
            "fontSize": 14,
            "height": 48,
            "justifyContent": "center",
            "letterSpacing": 1.5,
            "lineHeight": 24,
            "margin": 0,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 600,
          }
        }
        testID="AnnouncementActionButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 14,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {},
            ]
          }
        >
          GO TO GOOGLE
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUCMENTS mutation when the user clicks the modals action button | GO and Track action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "paddingHorizontal": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#B4B6BA",
                      "justifyContent": "flex-end",
                      "margin": 0,
                      "padding": 25,
                      "position": "absolute",
                      "right": -20,
                      "top": -70,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#007398",
            "borderRadius": 50,
            "borderWidth": 0,
            "fontSize": 14,
            "height": 48,
            "justifyContent": "center",
            "letterSpacing": 1.5,
            "lineHeight": 24,
            "margin": 0,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 600,
          }
        }
        testID="AnnouncementActionButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 14,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {},
            ]
          }
        >
          GO TO GOOGLE
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUCMENTS mutation when the user clicks the modals action button | Track action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "paddingHorizontal": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#B4B6BA",
                      "justifyContent": "flex-end",
                      "margin": 0,
                      "padding": 25,
                      "position": "absolute",
                      "right": -20,
                      "top": -70,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#007398",
            "borderRadius": 50,
            "borderWidth": 0,
            "fontSize": 14,
            "height": 48,
            "justifyContent": "center",
            "letterSpacing": 1.5,
            "lineHeight": 24,
            "margin": 0,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 600,
          }
        }
        testID="AnnouncementActionButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 14,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {},
            ]
          }
        >
          TRACK THIS ACTION
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUNCEMENT mutation with no action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "paddingHorizontal": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#B4B6BA",
                      "justifyContent": "flex-end",
                      "margin": 0,
                      "padding": 25,
                      "position": "absolute",
                      "right": -20,
                      "top": -70,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#007398",
            "borderRadius": 50,
            "borderWidth": 0,
            "fontSize": 14,
            "height": 48,
            "justifyContent": "center",
            "letterSpacing": 1.5,
            "lineHeight": 24,
            "margin": 0,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
            "width": 600,
          }
        }
        testID="AnnouncementNoActionButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 14,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {},
            ]
          }
        >
          Done
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
